# Agentic_Auto_ML

./: .gitignore  README.md  agent_state.py  main.py  pyproject.toml  requirements.txt  run_agent.py
cleaning/: actions.py  cleaning_engine.py  detectors.py  diagnostic_types.py  diagnostics.py  fingerprint.py  langgraph_node.py  metadata.py  pipeline.py  unified_diagnostics.py
cleaning_v2/: actions.py  audit.py  detectors.py  diagnostic_types.py  langgraph_node.py  pipeline.py  unified_diagnostics.py
data/: cleaning_audit.jsonl  column_inspection.jsonl  data_classification.jsonl  data_cleaned_d5c703ec.csv  data_metdata.jsonl  data_preprocessed_1_4e8503d1.csv  inspection_bundle (churn).xlsx  inspection_bundle (traffic).xlsx  inspection_bundle_churn.xlsx  inspection_bundle_traffic.xlsx  ml_suggestions.jsonl  model_selection v1.jsonl  model_selection v2.jsonl  model_selection.jsonl  preprocesses_1.jsonl  preprocesses_1.xlsx  user_input.jsonl  ~$preprocesses_1.xlsx
data_understanding/: column_analysis.csv  column_inspection_table.csv  column_profiler.py  exporter.py  feature_relationships.py  langgraph_node.py  loader.py  old.py  pipeline.py  semantic_reader.py  stage1_profile.json  test.py
ml_suggestion/: analyzers.py  config.py  engine.py  formatter.py  llm_advisor.py  model_registry.py  pipeline.py  schemas.py  scoring.py
model_selector/: data_characteristics.py  data_loader.py  langgraph_node.py  llm_reasoner.py  logger.py  model_rules.py  pipeline.py  problem_type_detector.py  selector.py  utils.py
preprocess_1/: executor.py  langgraph_node.py  logger.py  (+3 more)
(+34 files in other folders)
