[project]
name = "agentic-auto-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "openml>=0.14.2",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "pytest>=8.2.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
]
