[project]
name = "agentic-auto-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "category-encoders>=2.6.3",
    "feature-engine>=1.7.0",
    "imbalanced-learn>=0.12.0",
    "numpy>=1.26.0",
    "openml>=0.14.2",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "pytest>=8.2.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "tqdm>=4.66.0",
]
